v0.2.4 resolved the UI bug which was causing the LogIn button to not be visible.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,6 +102,15 @@
   transition: all 0.3s ease-out;
 }
 
+a.btn-mobile > button {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease-out;
+  font-size: 1.2rem;
+}
+
 .btn--medium {
   padding: 8px 20px;
   font-size: 20px;
@@ -182,6 +191,18 @@
 /************************************ END: LANDINGPAGE.JS ****************************************/
 /************************************ START: NAVBAR.JS *******************************************/
 .navbar {
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+#root > nav {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   display: flex;
